# league-legends

./: Cargo.toml
migrations/2023-12-05-084151_create_user_table/: down.sql  up.sql
migrations/2023-12-05-103705_create_leagues_table/: down.sql  up.sql
migrations/2023-12-05-103714_create_teams_table/: down.sql  up.sql
migrations/2023-12-05-103736_create_challenges_table/: down.sql  up.sql
migrations/2023-12-05-124410_addFPLColumnToUsersTable/: down.sql  up.sql
src/: main.rs  routes.rs  schema.rs
src/config/: db.rs  env.rs  mod.rs
src/controllers/: auth_controller.rs  mod.rs
src/models/: user.rs
src/services/: auth_service.rs
src/utils/: helpers.rs  mod.rs  responses.rs
