[package]
name = "League-Legends"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.1"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
validator_derive = "0.16.0"
